# SDL2-Pong

./: CMakeLists.txt  README.md  pong.sln  pong.vcxproj
src/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  RenderWindow.cpp  RenderWindow.h  Score.cpp  Score.h  main.cpp
